# marginfi-sdk

./: .gitignore  .gitmodules  README.md  generate-docs  package.json  tsconfig.json
python/: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .pylintrc  Cargo.toml  Makefile  README.md  main.py  noxfile.py  pyproject.toml  pytest.ini
python/docs/source/: conf.py  marginpy.account.rst  marginpy.client.rst  marginpy.config.rst  marginpy.constants.rst  marginpy.decimal.rst  marginpy.generated_client.accounts.rst  marginpy.generated_client.errors.rst  marginpy.generated_client.instructions.rst  marginpy.generated_client.rst  marginpy.generated_client.types.rst  marginpy.group.rst  marginpy.instruction.rst  marginpy.logger.rst  marginpy.rst  marginpy.utils.misc.rst  marginpy.utils.rst  marginpy.utp.mango.rst  marginpy.utp.rst  marginpy.utp.zo.rst  marginpy.utp.zo.utils.client.config.rst  marginpy.utp.zo.utils.client.rst  marginpy.utp.zo.utils.client.types.rst  marginpy.utp.zo.utils.client.zo.rst  marginpy.utp.zo.utils.rst  modules.rst
python/examples/: create_and_fund_account.py  example.env  load_and_print_account.py
python/marginpy/: .bumpversion.cfg  .gitignore  Cargo.toml  Makefile  pyproject.toml
python/marginpy/docs/: Makefile
python/marginpy/docs/source/: marginpy.generated_client.accounts.state.rst  marginpy.generated_client.errors.anchor.rst  marginpy.generated_client.instructions.configure_marginfi_group.rst  marginpy.generated_client.instructions.deactivate_utp.rst  marginpy.generated_client.instructions.liquidate.rst  marginpy.generated_client.instructions.margin_withdraw_collateral.rst  marginpy.generated_client.instructions.update_interest_accumulator.rst  marginpy.generated_client.instructions.utp_mango_deposit.rst  marginpy.generated_client.instructions.utp_mango_use_cancel_perp_order.rst  marginpy.generated_client.instructions.utp_mango_use_place_perp_order.rst  marginpy.generated_client.instructions.utp_zo_activate.rst  marginpy.generated_client.instructions.utp_zo_place_perp_order.rst  marginpy.generated_client.types.bank_config.rst  marginpy.generated_client.types.lending_side.rst  marginpy.generated_client.types.mango_expiry_type.rst  marginpy.generated_client.types.margin_requirement.rst  marginpy.generated_client.types.order_type.rst  marginpy.generated_client.types.rst  marginpy.generated_client.types.utp_config.rst  marginpy.generated_client.types.utp_zo_place_perp_order_ix_args.rst  marginpy.utils.rst  marginpy.utp.mango.config.rst  marginpy.utp.mango.rst  marginpy.utp.rst
python/marginpy/examples/: go_long_sol_mango.py
python/marginpy/python/marginpy/: __init__.py  account.py  bank.py  client.py  config.py
python/marginpy/src/utp_observation/: mango.rs  zo.rs
python/marginpy/tests/: config.py  utils.py
python/marginpy/tests/fixtures/: __init__.py  idl.json
python/marginpy/tests/integration/: test_account.py  test_client.py  test_group.py
python/marginpy/tests/unit/: test_account.py  test_bank.py  test_utp_observe.py
python/python/marginpy/: __init__.py  bank.py  client.py  config.py  constants.py  group.py  idl.json  logger.py  types.py
python/python/marginpy/marginpy/: __init__.pyi
python/python/marginpy/utils/: __init__.py  data_conversion.py  instructions.py
python/python/marginpy/utp/: __init__.py  account.py
python/src/idl/: marginfi.json
python/src/marginpy/: __init__.py  account.py  bank.py  client.py  config.py  constants.py  decimal.py  group.py  idl.json  instruction.py  marginfi_account.py  marginfi_client.py  marginfi_group.py  program_id.py  types.py  utils.py
python/src/marginpy/accounts/: marginfi_account.py
python/src/marginpy/errors/: custom.py
python/src/marginpy/generated_client/: program_id.py
python/src/marginpy/instructions/: bank_fee_vault_withdraw.py  bank_insurance_vault_withdraw.py  liquidate.py  margin_deposit_collateral.py  update_interest_accumulator.py  utp_mango_activate.py  utp_mango_use_place_perp_order.py  utp_zo_cancel_perp_order.py
python/src/marginpy/types/: bank.py  group_config.py  lending_side.py  order_type.py  utp_account_config.py  utp_config.py  utp_zo_place_perp_order_ix_args.py
python/src/marginpy/utp/: __init__.py  account.py  observation.py
python/src/python/marginpy/: __init__.py  account.py  bank.py  client.py  config.py  decimal.py  group.py  instructions.py  logger.py  types.py  utils.py
python/src/rust/: lib.rs
python/src/rust/utp_observation/: mango.rs  mod.rs  zo.rs
python/src/utp_observation/: mango.rs  mod.rs
python/tests/: config.py  main.py  test__init__.py  test_account.py  test_bank.py  test_client.py  test_config.py  test_decimal.py  test_group.py  test_init.py  test_main.py  test_utils.py  utils.py
python/tests/fixtures/: __init__.py
python/tests/fixtures/accounts/: mango_account.json  mango_cache.json  mango_group.json  marginfi_account_1.json  marginfi_account_2.json  marginfi_group_1.json  marginfi_group_2.json  zo_cache.json  zo_control.json  zo_margin.json  (+1 more)
python/tests/integration/: test_account.py  test_client.py  test_group.py
python/tests/unit/: test_account.py  test_bank.py  test_client.py  test_config.py  test_decimal.py  test_group.py  test_utils.py  test_utp_observe.py
rust/doctor/: Cargo.toml  Dockerfile
rust/doctor/src/: doctor.rs  main.rs
rust/green-tea/: Cargo.toml
rust/green-tea/src/: account_service.rs  main.rs
rust/marginfi-cli/: Cargo.toml
rust/marginfi-cli/src/: main.rs
rust/marginfi-common/: Cargo.toml
rust/marginfi-common/src/: constants.rs  errors.rs  lib.rs  mango.rs  zo.rs
rust/marginfi-cpi/: Cargo.toml  README.md
rust/marginfi-cpi/example/: Anchor.toml  package.json
rust/marginfi-cpi/src/: lib.rs
rust/marginfi-rebalancer/: Cargo.toml
rust/marginfi-rebalancer/src/: bot.rs  config.rs  entrypoint.rs  lib.rs  processor.rs
rust/marginfi-sdk/: Cargo.toml
rust/marginfi-sdk/src/: client.rs  lib.rs  marginfi_account.rs  observer.rs  utils.rs
rust/zo-utils/: Cargo.toml
rust/zo-utils/benches/: bench.rs
rust/zo-utils/fuzz/: Cargo.toml
rust/zo-utils/src/: lib.rs  margin.rs
(+659 files in other folders)
