[tool.poetry]
name = "marginpy"
version = "0.1.0"
description = ""
authors = ["man0s <95379755+losman0s@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
anchorpy = "^0.9.3"
solana = "0.25.0"
buffer = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.17.2"
pytest-cov = "^3.0.0"
testfixtures = "^7.0.0"
autoflake = "^1.4"
flake8 = "^4.0.1"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
