[project]
name = "marginpy"
version = "0.1.0"
description = "marginfi Python SDK"
readme = "README.md"
requires-python = ">=3.10, <3.11"
license = { file = "LICENSE" }
keywords = ["marginfi", "sdk"]
authors = [
  { name = "MRGN Labs" },
  { name = "man0s", email = "95379755+losman0s@users.noreply.github.com" },
]
repository = "https://github.com/mrgnlabs/marginfi-sdk/python"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
maintainers = [
    { name = "man0s", email = "95379755+losman0s@users.noreply.github.com" },
]
dependencies = [
    "borsh-construct",
    "anchorpy>=0.9.4",
    "solana>=0.25.0",
    "buffer>=0.2.1",
    "construct>=2.10.67",
    "tmp-patch-mango-explorer>=3.4.9",
    "maturin>=0.13.0",
    "python-dotenv>=0.20.0",
    "coloredlogs>=15.0.1",
]

[project.urls]
homepage = "https://github.com/mrgnlabs/marginfi-sdk/python"
repository = "https://github.com/mrgnlabs/marginfi-sdk/python"

[tool.poetry]
name = "marginpy"
version = "0.1.0"
description = "marginfi Python SDK"
authors = ["MRGN Labs", "man0s <95379755+losman0s@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10 <3.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.17.2"
pytest-cov = "^3.0.0"
testfixtures = "^7.0.0"
autoflake = "^1.4"
mypy = "^0.961"
typer = "0.4.1"
ipython = "^8.0.1"
genpy = "^2021.1"
black = "^22.3.0"
bumpversion = "^0.6.0"
sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"
pydocstyle = "^6.1.1"
flake8 = "^4.0.1"
pylint = "^2.14.5"
isort = "^5.10.1"

[tool.isort]
profile = "black"
known_first_party = "poetry"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"
