[package]
name = "green-tea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marginfi-sdk = { path = "../marginfi-sdk", features = ["mainnet-beta"] }
solana-sdk = "1.10"
solana-client = "1.10"
tokio = "1.14"
fixed = "1.11"
fixed-macro = "1.1.1"
crossbeam-channel = "0.5.6"
anyhow = "1.0.65"
dashmap = "5.4.0"
log = "0.4.17"
env_logger = "0.9.1"
futures = "0.3.24"
solana-account-decoder = "1.10"
mango-protocol = { git = "https://github.com/mrgnlabs/mango-v3.git", tag = "v3.5.1-fork.1", package = "mango", features = [ "no-entrypoint", "client"] }
mango-common = { git = "https://github.com/mrgnlabs/mango-v3.git", tag = "v3.5.1-fork.1" }
zo-abi = { git = "https://github.com/01protocol/zo-abi.git", rev = "97e2caeeb117fa0ab625effcf80b6125d9470415", features = [ "no-entrypoint", "cpi" ] }
bytemuck = "1.12"