[package]
name = "marginfi-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marginfi-sdk = { path = "../marginfi-sdk" }
solana-sdk = "1.10"
solana-client = "1.10"
tokio = "1.14"
fixed = "1.11"
fixed-macro = "1.1.1"