[package]
name = "marginfi-cpi"
version = "0.1.0"
edition = "2021"

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-gen = "0.2.0"
anchor-lang = ">=0.24.2"

[patch.crates-io]
borsh = { version = "0.9", features = ["const-generics"] }
