[package]
name = "marginfi-cpi"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "marginfi CPI interface"
repository = "https://github.com/mrgnlabs/marginfi-sdk/tree/main/rust/marginfi-cpi"
readme = "README.md"
keywords = ["marginfi", "cpi"]

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
mainnet-beta = []

[dependencies]
anchor-gen = "0.3.0"
anchor-lang = ">=0.24.2"
