[package]
name = "marginfi-rebalancer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mfi-rebalancer"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "3.2.10", features = ["derive"] }
anyhow = "1.0.58"
log = "0.4.17"
solana-client = "1.9.29"
solana-sdk = "1.9.29"
solana-program = "1.9.29"
env_logger = "0.9.0"
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0.0"
url = "2.2.2"
dotenv = "0.15"
anchor-client = "0.24.2"
shellexpand = "2.1.0"
marginfi = { path = "../../../programs/marginfi", features = ["client"] }
mango-protocol = { git = "https://github.com/mrgnlabs/mango-v3.git", rev="feac29b69834051671752bc316d9ee4fbb61ae9b", package= "mango", features = ["no-entrypoint", "client"] }
zo-abi = { git = "https://github.com/01protocol/zo-abi.git", rev = "3ff8def2c747899c9d534f5de36988b6f0a0d46c", features = [ "cpi" ] }
