[package]
name = "example-cpi"
version = "0.1.0"
description = "Example marginfi CPI program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "example_cpi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
marginfi-cpi = { version = "0.1.0", path = "../../../" }
